[tool.poetry]
name = "sdj-remotetools"
version = "0.1.1"
description = "Collection of remote management tools through SSH"
authors = ["Steve De Jongh <dejongh.st@gmail.com>"]
readme = "README.md"
repository = "https://github.com/sdejongh/sdj_remotetools"

[tool.poetry.dependencies]
python = "^3.10"
paramiko = "^3.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rcat = 'sdj_remotetools.main:rcat'