[tool.poetry]
name = "sdj-remotetools"
version = "0.3.1"
description = "Collection of remote management tools through SSH"
authors = ["Steve De Jongh <dejongh.st@gmail.com>"]
readme = "README.md"
repository = "https://github.com/sdejongh/sdj_remotetools"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
keywords = ["cli", "ssh", "cat", "remote", "command-line"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/sdejongh/sdj_remotetools/issues"

[tool.poetry.dependencies]
python = "^3.9"
paramiko = "^3.3.1"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rcat = 'sdj_remotetools.main:rcat'